<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".LoadingActivity">

    <LinearLayout
        android:id="@+id/first_layout"
        android:layout_width="fill_parent"
        android:layout_height="450dp"
        app:layout_constraintStart_toStartOf="parent"
        android:orientation="vertical"
        android:gravity="fill">

        <ImageView
            android:layout_width="396dp"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/logo_tz" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome"
            android:textStyle="bold"
            android:textSize="30sp"
            android:textAlignment="center"
            android:textColor="@color/blueApp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/shuta"
            android:textColor="@color/greenApp"
            android:textSize="16sp"
            android:textStyle="italic"
            android:textAlignment="center" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/second_layout"
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        app:layout_constraintTop_toBottomOf="@id/first_layout"
        android:gravity="bottom">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/copyright" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/developer"
            android:layout_marginStart="30dp" />
    </LinearLayout>


</android.support.constraint.ConstraintLayout>